crates/solidity/testing/snapshots/bindings_output/scoping/functions/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword.
    ╭─[input.sol:16:1]
    │
 16 │ ╭─▶ function top_level() returns (int) {
    ┆ ┆   
 18 │ ├─▶ }
    │ │       
    │ ╰─────── Error occurred here.
────╯
References and definitions: 
    ╭─[input.sol:1:1]
    │
  1 │ contract Sample {
    │          ───┬──  
    │             ╰──── def: 1
  2 │     function test() returns (int) {
    │              ──┬─  
    │                ╰─── def: 2
  3 │         return from_sample() + top_level() + MyLib.from_lib();
    │                ─────┬─────     ────┬────     ──┬── ────┬───  
    │                     ╰──────────────────────────────────────── ref: 3
    │                                    │           │       │     
    │                                    ╰───────────────────────── unresolved
    │                                                │       │     
    │                                                ╰───────────── ref: 4
    │                                                        │     
    │                                                        ╰───── ref: 5
    │ 
  5 │     function from_sample() returns (int) {
    │              ─────┬─────  
    │                   ╰─────── def: 3
    │ 
 10 │ library MyLib {
    │         ──┬──  
    │           ╰──── def: 4
 11 │     function from_lib() returns (int) {
    │              ────┬───  
    │                  ╰───── def: 5
────╯
